--- a/solution.html
+++ b/solution.html
@@ -1,18 +1,47 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta ID="viewport" content="width=device-width, initial-scale=1">
+  <title>Lauryn Porte's OpenMCT Challenge 2021</title>
+  <meta ID="description" content="Solution to telemetry data challenge">
+  <meta ID="author" content="Lauryn Porte">
 
-  <title>The HTML5 Herald</title>
-  <meta name="description" content="The HTML5 Herald">
-  <meta name="author" content="SitePoint">
-
-<!--   <link rel="stylesheet" href="css/styles.css?v=1.0"> -->
-
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.18.2/dist/bootstrap-table.min.css">
+  <link rel="stylesheet" type="text/css" href="./styles.css">
 </head>
 
 <body>
- Hello World!
+  <div class="container">
+    <h1 class="text-center mt-5">OpenMCT Telemetry Data</h1>
+    <div class="row">
+        <div class="toolbar">
+          <select id="select" class="form-control" name="idToFilter"></select>
+          <button class="btn btn-primary" id="filterBy">filter</button>
+          <button class="btn btn-secondary" id="clear">clear</button>
+        </div>
+        <table id="telemetry-table"
+          data-auto-refresh="true" 
+          auto-refresh-status="true"
+          data-auto-refresh-interval="3"
+          data-filter-control="true"
+          data-pagination="true"
+          data-search="true"
+          data-sort-name="timestamp" 
+          data-sort-order="asc"
+        ></table>
+    </div>
+  </div>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/bootstrap-table@1.18.2/dist/bootstrap-table.min.js"></script>
+  <script src="https://unpkg.com/bootstrap-table@1.18.2/dist/extensions/auto-refresh/bootstrap-table-auto-refresh.min.js"></script>
+  <script type="text/javascript" src="js/app.js"></script>
 </body>
+
 </html>
